fabric/cluster/tailnet/routers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-subnet-router-svc1
  namespace: fabric-tailnet
  labels:
    app.kubernetes.io/component: subnet-router
    app.kubernetes.io/instance: svc1
    app.kubernetes.io/name: fabric-tailnet
    app.kubernetes.io/part-of: fabric
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: subnet-router
      app.kubernetes.io/instance: svc1
      app.kubernetes.io/name: fabric-tailnet
  template:
    metadata:
      labels:
        app.kubernetes.io/component: subnet-router
        app.kubernetes.io/instance: svc1
        app.kubernetes.io/name: fabric-tailnet
        app.kubernetes.io/part-of: fabric
    spec:
      automountServiceAccountToken: true
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.86.5@sha256:9e2bfdd9e2ce724df53f976d06a4a9933aa730dc655ace42798f4c73735d1cac
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002
              name: health
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: health
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run/tailscale
              name: run
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        fabric.samcday.com/platform: "true"
        kubernetes.io/hostname: fabric-az1-svc1
      serviceAccountName: fabric-subnet-router-svc1
      terminationGracePeriodSeconds: 60
      tolerations:
        - effect: NoSchedule
          key: fabric.samcday.com/platform
          operator: Equal
          value: "true"
      volumes:
        - emptyDir: {}
          name: run
        - emptyDir: {}
          name: tmp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-subnet-router-svc2
  namespace: fabric-tailnet
  labels:
    app.kubernetes.io/component: subnet-router
    app.kubernetes.io/instance: svc2
    app.kubernetes.io/name: fabric-tailnet
    app.kubernetes.io/part-of: fabric
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: subnet-router
      app.kubernetes.io/instance: svc2
      app.kubernetes.io/name: fabric-tailnet
  template:
    metadata:
      labels:
        app.kubernetes.io/component: subnet-router
        app.kubernetes.io/instance: svc2
        app.kubernetes.io/name: fabric-tailnet
        app.kubernetes.io/part-of: fabric
    spec:
      automountServiceAccountToken: true
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.86.5@sha256:9e2bfdd9e2ce724df53f976d06a4a9933aa730dc655ace42798f4c73735d1cac
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002
              name: health
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: health
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run/tailscale
              name: run
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        fabric.samcday.com/platform: "true"
        kubernetes.io/hostname: fabric-az1-svc2
      serviceAccountName: fabric-subnet-router-svc2
      terminationGracePeriodSeconds: 60
      tolerations:
        - effect: NoSchedule
          key: fabric.samcday.com/platform
          operator: Equal
          value: "true"
      volumes:
        - emptyDir: {}
          name: run
        - emptyDir: {}
          name: tmp
